2020-11-03  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/lib/symbols.txt: Added enn with cedilla
	to symbol table.  This may be the only place it is used.

2020-10-30  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/ajbbook/entrydisplay.py (display_entry_publishers):
	Add try/except clause around the parsing of the place:publisher
	string parsing.  Had a problem with a space in the entry form
	that caused ajbbooks to crash.

	Should split the entry_to_display() and display_to_entry()
	procedures into read/write_form()
	convert_string/entry_to_entry/string().  This will allow unittests
	on the string conversion functions

2020-09-06  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/lib/search.py: Added unit tests.

	* Tools/python/aabooks/lib/pagination_xml.py: Added unit tests.

	* Tools/python/aabooks/journal/journalwindow.py: Fix issue with
	save file.  I had not tested the save function and had not
	modified the calls for journalfile.filename.

2020-09-05  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/journal/journalwindow.py: removed display
	to/from entry and moved them to entrydisplay.py

	* Tools/python/aabooks/journal/entrydisplay.py: created from
	display to/from entry in journalwindow.py

	* Tools/python/aabooks/ajbbook/ajbwindow.py: Added function
	display_entry_is_valid() to check validity of the display form
	before converting the form to an ajbentry.

	* Tools/python/aabooks/ajbbook/entrydisplay.py: Finished work on
	the dislay to entry functions.  Tested by hand successfully.

2020-09-03  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/ajbbook/entrydisplay.py: Began work on
	entry to display functions.  Moved original ones from ajbwindow.py
	into entrydisplay.py.  Tested sucessfully and began clean up with
	pylint.

	* aabooks: merge with master

	* Tools/python/aabooks/ajbbook/ajbcomments.py: Added unittest
	yesterday.  Tested with an XML file, converted to text, then read